<resources>
	<string name="app_name">OnboardingScreen</string>
	<string name="add_manual_account_completed_activity_add_account_button_text">Add account</string>
	<string name="add_manual_account_completed_activity_johnsavings2019_edit_text_hint">JohnSavings2019</string>
	<string name="add_manual_account_completed_activity_currency_text_view_hint">Currency</string>
	<string name="add_manual_account_completed_activity_current_ballance_text_view_hint">Current ballance</string>
	<string name="add_manual_account_completed_activity_currency_text_view_text">Currency</string>
	<string name="add_manual_account_completed_activity_account_name_text_view_hint">Account name</string>
	<string name="add_manual_account_completed_activity_current_ballance_text_view_text">Current ballance</string>
	<string name="add_manual_account_completed_activity_savings_text_view_hint">Savings</string>
	<string name="add_manual_account_completed_activity_add_manual_account_text_view_text">Add manual account</string>
	<string name="add_manual_account_completed_activity_usd_united_states_text_view_hint">$USD - United States Dollar</string>
	<string name="add_manual_account_completed_activity_details_text_view_text">Details</string>
	<string name="add_manual_account_completed_activity_account_name_text_view_text">Account name</string>
	<string name="add_manual_account_completed_activity_details_text_view_hint">Details</string>
	<string name="add_manual_account_completed_activity_edit_text_edit_text_hint">$1,000.00</string>
	<string name="add_manual_account_completed_activity_usd_united_states_text_view_text">$USD - United States Dollar</string>
	<string name="add_manual_account_completed_activity_add_account_button_hint">Add account</string>
	<string name="add_manual_account_completed_activity_add_manual_account_text_view_hint">Add manual account</string>
	<string name="add_manual_account_completed_activity_select_an_account_ty_text_view_text">Select an account type</string>
	<string name="add_manual_account_completed_activity_savings_text_view_text">Savings</string>
	<string name="add_manual_account_completed_activity_select_an_account_ty_text_view_hint">Select an account type</string>
	<string name="mobile_number3_activity_let_sget_started_text_view_hint">Let\'s get started</string>
	<string name="mobile_number3_activity_continue_button_text">Continue</string>
	<string name="mobile_number3_activity_continue_button_hint">Continue</string>
	<string name="mobile_number3_activity_what_is_your_mobile_text_view_hint">What is your mobile number?</string>
	<string name="mobile_number3_activity_what_is_your_mobile_text_view_text">What is your mobile number?</string>
	<string name="mobile_number3_activity_mobile_number_text_view_text">Mobile number</string>
	<string name="mobile_number3_activity_edit_text_edit_text_hint">+1 777 8521 001</string>
	<string name="mobile_number3_activity_let_sget_started_text_view_text">Let\'s get started</string>
	<string name="mobile_number3_activity_mobile_number_text_view_hint">Mobile number</string>
	<string name="onboarding3_activity_login_button_hint">Login</string>
	<string name="onboarding3_activity_take_control_of_your_text_view_text">Take control of your money by tracking\nyour expenses, adding goals</string>
	<string name="onboarding3_activity_light_and_dark_theme_text_view_hint">Light and Dark theme</string>
	<string name="onboarding3_activity_sign_up_button_text">Sign up</string>
	<string name="onboarding3_activity_light_and_dark_theme_text_view_text">Light and Dark theme</string>
	<string name="onboarding3_activity_login_button_text">Login</string>
	<string name="onboarding3_activity_sign_up_button_hint">Sign up</string>
	<string name="onboarding3_activity_take_control_of_your_text_view_hint">Take control of your money by tracking\nyour expenses, adding goals</string>
	<string name="onboarding2_activity_skip_button_text">Skip</string>
	<string name="onboarding2_activity_take_control_of_your_text_view_text">Take control of your money by tracking\nyour expenses, adding goals</string>
	<string name="onboarding2_activity_welcome_to_budget_pl_text_view_text">Welcome to Budget Planner</string>
	<string name="onboarding2_activity_skip_button_hint">Skip</string>
	<string name="onboarding2_activity_take_control_of_your_text_view_hint">Take control of your money by tracking\nyour expenses, adding goals</string>
	<string name="onboarding2_activity_welcome_to_budget_pl_text_view_hint">Welcome to Budget Planner</string>
	<string name="add_manual_account_activity_add_button_text">Add account</string>
	<string name="add_manual_account_activity_select_an_account_ty_text_view_hint">Select an account type</string>
	<string name="add_manual_account_activity_currency_text_view_text">Currency</string>
	<string name="add_manual_account_activity_add_manual_account_text_view_hint">Add manual account</string>
	<string name="add_manual_account_activity_details_text_view_hint">Details</string>
	<string name="add_manual_account_activity_united_states_dollar_text_view_text">United States Dollar</string>
	<string name="add_manual_account_activity_savings_text_view_text">Savings</string>
	<string name="add_manual_account_activity_account_name_edit_text_hint">Account name</string>
	<string name="add_manual_account_activity_savings_text_view_hint">Savings</string>
	<string name="add_manual_account_activity_select_an_account_ty_text_view_text">Select an account type</string>
	<string name="add_manual_account_activity_united_states_dollar_text_view_hint">United States Dollar</string>
	<string name="add_manual_account_activity_current_ballance_edit_text_hint">Current ballance</string>
	<string name="add_manual_account_activity_add_manual_account_text_view_text">Add manual account</string>
	<string name="add_manual_account_activity_add_button_hint">Add account</string>
	<string name="add_manual_account_activity_currency_text_view_hint">Currency</string>
	<string name="add_manual_account_activity_details_text_view_text">Details</string>
	<string name="more_about_you_copy_activity_john_doe_com_edit_text_hint">john@doe.com</string>
	<string name="more_about_you_copy_activity_first_and_last_name_text_view_text">First and last name</string>
	<string name="more_about_you_copy_activity_continue_button_text">Get started</string>
	<string name="more_about_you_copy_activity_email_address_text_view_text">Email address</string>
	<string name="more_about_you_copy_activity_address_edit_text_hint">Address</string>
	<string name="more_about_you_copy_activity_email_address_text_view_hint">Email address</string>
	<string name="more_about_you_copy_activity_for_delivery_updates_text_view_text">For delivery updates</string>
	<string name="more_about_you_copy_activity_for_delivery_updates_text_view_hint">For delivery updates</string>
	<string name="more_about_you_copy_activity_johnatan_doe_edit_text_hint">Johnatan Doe</string>
	<string name="more_about_you_copy_activity_more_about_you_text_view_text">More about you</string>
	<string name="more_about_you_copy_activity_first_and_last_name_text_view_hint">First and last name</string>
	<string name="more_about_you_copy_activity_more_about_you_text_view_hint">More about you</string>
	<string name="more_about_you_copy_activity_continue_button_hint">Get started</string>
	<string name="verification_code_activity_resend_button_hint">Resend</string>
	<string name="verification_code_activity_edit_text_three_edit_text_hint">7</string>
	<string name="verification_code_activity_verification_code_text_view_text">Verification code</string>
	<string name="verification_code_activity_if_you_don_treceive_text_view_hint">If you don’t receive the code in 30 seconds\ntap bellow to resend it</string>
	<string name="verification_code_activity_verification_code_text_view_hint">Verification code</string>
	<string name="verification_code_activity_if_you_don_treceive_text_view_text">If you don’t receive the code in 30 seconds\ntap bellow to resend it</string>
	<string name="verification_code_activity_edit_text_edit_text_hint">5</string>
	<string name="verification_code_activity_resend_button_text">Resend</string>
	<string name="verification_code_activity_please_enter_the4_dtext_view_text">Please enter the 4-digit code sent to you\nat 1 777 8521 001</string>
	<string name="verification_code_activity_edit_text_two_edit_text_hint">3</string>
	<string name="verification_code_activity_please_enter_the4_dtext_view_hint">Please enter the 4-digit code sent to you\nat 1 777 8521 001</string>
	<string name="successfull_added_activity_done_button_text">Done</string>
	<string name="successfull_added_activity_lorem_ipsum_dollor_stext_view_hint">Lorem ipsum dollor sit ament pallentesque\nadeipiscing elit enim minim ven\nultricies eget, tempor sit amet, ante.</string>
	<string name="successfull_added_activity_your_account_has_bee_text_view_hint">Your account has been\nsuccessfully added!</string>
	<string name="successfull_added_activity_your_account_has_bee_text_view_text">Your account has been\nsuccessfully added!</string>
	<string name="successfull_added_activity_done_button_hint">Done</string>
	<string name="successfull_added_activity_lorem_ipsum_dollor_stext_view_text">Lorem ipsum dollor sit ament pallentesque\nadeipiscing elit enim minim ven\nultricies eget, tempor sit amet, ante.</string>
	<string name="create_passcode_activity_create_passcode_text_view_hint">Create passcode</string>
	<string name="create_passcode_activity_create_passcode_text_view_text">Create passcode</string>
	<string name="create_passcode_activity_enter_your_otp_code_text_view_text">Enter your OTP code here. Used for logging in.</string>
	<string name="create_passcode_activity_enter_your_otp_code_text_view_hint">Enter your OTP code here. Used for logging in.</string>
	<string name="create_passcode_activity_edit_text_edit_text_hint">3</string>
	<string name="create_passcode_activity_edit_text_two_edit_text_hint">8</string>
	<string name="go_premium_choosing_plan_activity_months399_text_view_text">12 months - $3.99  </string>
	<string name="go_premium_choosing_plan_activity_bachelor_text_view_text">bachelor</string>
	<string name="go_premium_choosing_plan_activity_go_premium_button_text">Continue</string>
	<string name="go_premium_choosing_plan_activity_cancel_button_text">Cancel</string>
	<string name="go_premium_choosing_plan_activity_ut_enim_ad_minim_ven_two_text_view_text">Ut enim ad minim veniam, quis nostrud\nexercitation ultrices nulla quis nibh.</string>
	<string name="go_premium_choosing_plan_activity_month699_text_view_text">1 month - $6.99  </string>
	<string name="go_premium_choosing_plan_activity_married_text_view_text">married</string>
	<string name="go_premium_choosing_plan_activity_married_with_childre_text_view_text">married with children</string>
	<string name="go_premium_choosing_plan_activity_ut_enim_ad_minim_ven_text_view_text">Ut enim ad minim veniam, quis nostrud\nexercitation ultrices nulla quis nibh.</string>
	<string name="go_premium_choosing_plan_activity_ut_enim_ad_minim_ven_three_text_view_text">Ut enim ad minim veniam, quis nostrud\nexercitation ultrices nulla quis nibh.</string>
	<string name="go_premium_choosing_plan_activity_upgrade_to_premium_text_view_text">Upgrade to Premium</string>
	<string name="go_premium_choosing_plan_activity_cance_any_time_in_ap_text_view_text">Cance any time in AppleStore</string>
	<string name="go_premium_choosing_plan_activity_months499_text_view_text">6 months - $4.99  </string>
	<string name="onboarding5_activity_get_the_life_you_wan_text_view_text">Get the life you want!\nSave more money.</string>
	<string name="onboarding5_activity_login_button_text">Continue with facebook</string>
	<string name="onboarding5_activity_sign_up_button_text">Create free account</string>
	<string name="onboarding5_activity_already_have_an_acco_button_text">Already have an account?</string>
	<string name="onboarding5_activity_sign_up_copy_button_text">Login</string>
</resources>