<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/constraint_layout_constraint_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/onboarding5_activity_constraint_layout_constraint_layout_background_color">

	<ImageView
		android:id="@+id/bg_copy2_image_view"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:scaleType="centerCrop"
		android:src="@drawable/bg_copy_2"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintHorizontal_weight="1"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="0dp"
		tools:layout_editor_absoluteY="0dp"/>

	<Button
		android:id="@+id/sign_up_button"
		android:layout_width="@dimen/onboarding5_activity_sign_up_button_width"
		android:layout_height="@dimen/onboarding5_activity_sign_up_button_height"
		android:layout_marginTop="@dimen/onboarding5_activity_sign_up_button_margin_top"
		android:background="?attr/selectableItemBackground"
		android:fontFamily="@font/font_karla_bold"
		android:gravity="center"
		android:text="@string/onboarding5_activity_sign_up_button_text"
		android:textColor="#FFFFFF"
		android:textSize="@dimen/onboarding5_activity_sign_up_button_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/get_the_life_you_wan_text_view"
		tools:layout_editor_absoluteX="30dp"
		tools:layout_editor_absoluteY="463dp"/>

	<Button
		android:id="@+id/sign_up_copy_button"
		android:layout_width="@dimen/onboarding5_activity_sign_up_copy_button_width"
		android:layout_height="@dimen/onboarding5_activity_sign_up_copy_button_height"
		android:layout_marginBottom="@dimen/onboarding5_activity_sign_up_copy_button_margin_bottom"
		android:background="@drawable/onboarding5_activity_sign_up_copy_button_ripple"
		android:fontFamily="@font/font_karla_bold"
		android:gravity="center"
		android:text="@string/onboarding5_activity_sign_up_copy_button_text"
		android:textColor="#FFFFFF"
		android:textSize="@dimen/onboarding5_activity_sign_up_copy_button_text_size"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		tools:layout_editor_absoluteX="31dp"
		tools:layout_editor_absoluteY="628dp"/>

	<Button
		android:id="@+id/login_button"
		android:layout_width="@dimen/onboarding5_activity_login_button_width"
		android:layout_height="@dimen/onboarding5_activity_login_button_height"
		android:layout_marginBottom="@dimen/onboarding5_activity_login_button_margin_bottom"
		android:background="@drawable/onboarding5_activity_login_button_ripple"
		android:fontFamily="@font/font_karla_bold"
		android:gravity="center"
		android:text="@string/onboarding5_activity_login_button_text"
		android:textColor="#FFFFFF"
		android:textSize="@dimen/onboarding5_activity_login_button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/already_have_an_acco_button"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		tools:layout_editor_absoluteX="31dp"
		tools:layout_editor_absoluteY="525dp"/>

	<Button
		android:id="@+id/already_have_an_acco_button"
		android:layout_width="@dimen/onboarding5_activity_already_have_an_acco_button_width"
		android:layout_height="@dimen/onboarding5_activity_already_have_an_acco_button_height"
		android:layout_marginBottom="@dimen/onboarding5_activity_already_have_an_acco_button_margin_bottom"
		android:background="?attr/selectableItemBackground"
		android:fontFamily="@font/font_karla_regular"
		android:gravity="center"
		android:text="@string/onboarding5_activity_already_have_an_acco_button_text"
		android:textColor="#FFFFFF"
		android:textSize="@dimen/onboarding5_activity_already_have_an_acco_button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/sign_up_copy_button"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		tools:layout_editor_absoluteX="94dp"
		tools:layout_editor_absoluteY="594dp"/>

	<TextView
		android:id="@+id/get_the_life_you_wan_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/onboarding5_activity_get_the_life_you_wan_text_view_margin_top"
		android:fontFamily="@font/font_karla_bold"
		android:gravity="center"
		android:lineSpacingMultiplier="0.92"
		android:text="@string/onboarding5_activity_get_the_life_you_wan_text_view_text"
		android:textColor="#FFFFFF"
		android:textSize="@dimen/onboarding5_activity_get_the_life_you_wan_text_view_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="76dp"
		tools:layout_editor_absoluteY="76dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>