<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/constraint_layout_constraint_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/go_premium_choosing_plan_activity_constraint_layout_constraint_layout_background_color">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/married_constraint_layout"
		android:layout_width="match_parent"
		android:layout_marginStart="19dp"
		android:layout_height="@dimen/go_premium_choosing_plan_activity_married_constraint_layout_height"
		android:layout_marginEnd="@dimen/go_premium_choosing_plan_activity_married_constraint_layout_margin_end"
		android:layout_marginTop="@dimen/go_premium_choosing_plan_activity_married_constraint_layout_margin_top"
		android:background="@drawable/yellow_bg"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/bachelor_constraint_layout"
		tools:layout_editor_absoluteX="20dp"
		tools:layout_editor_absoluteY="269dp">
	
		<ImageButton
			android:id="@+id/path_button"
			android:layout_width="@dimen/go_premium_choosing_plan_activity_path_button_width"
			android:layout_height="@dimen/go_premium_choosing_plan_activity_path_button_height"
			android:layout_marginEnd="@dimen/go_premium_choosing_plan_activity_path_button_margin_end"
			android:background="?attr/selectableItemBackground"
			android:src="@drawable/path_3"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="311dp"
			tools:layout_editor_absoluteY="51dp"/>
	
		<TextView
			android:id="@+id/ut_enim_ad_minim_ven_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/go_premium_choosing_plan_activity_ut_enim_ad_minim_ven_text_view_margin_start"
			android:layout_marginTop="@dimen/go_premium_choosing_plan_activity_ut_enim_ad_minim_ven_text_view_margin_top"
			android:alpha="0.8"
			android:fontFamily="@font/font_karla_regular"
			android:gravity="start"
			android:lineSpacingMultiplier="0.93"
			android:text="@string/go_premium_choosing_plan_activity_ut_enim_ad_minim_ven_text_view_text"
			android:textColor="#FFFFFF"
			android:textSize="@dimen/go_premium_choosing_plan_activity_ut_enim_ad_minim_ven_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/months499_text_view"
			tools:layout_editor_absoluteX="20dp"
			tools:layout_editor_absoluteY="74dp"/>
	
		<TextView
			android:id="@+id/months499_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/go_premium_choosing_plan_activity_months499_text_view_margin_start"
			android:layout_marginTop="@dimen/go_premium_choosing_plan_activity_months499_text_view_margin_top"
			android:fontFamily="@font/font_karla_bold"
			android:gravity="start"
			android:text="@string/go_premium_choosing_plan_activity_months499_text_view_text"
			android:textColor="#FFFFFF"
			android:textSize="@dimen/go_premium_choosing_plan_activity_months499_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/married_text_view"
			tools:layout_editor_absoluteX="20dp"
			tools:layout_editor_absoluteY="39dp"/>
	
		<TextView
			android:id="@+id/married_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/go_premium_choosing_plan_activity_married_text_view_margin_start"
			android:layout_marginTop="@dimen/go_premium_choosing_plan_activity_married_text_view_margin_top"
			android:alpha="0.8"
			android:fontFamily="@font/font_karla_regular"
			android:gravity="start"
			android:letterSpacing="0.15"
			android:text="@string/go_premium_choosing_plan_activity_married_text_view_text"
			android:textColor="#FFFFFF"
			android:textSize="@dimen/go_premium_choosing_plan_activity_married_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="20dp"
			tools:layout_editor_absoluteY="19dp"/>
	</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/married_with_childre_constraint_layout"
		android:layout_width="match_parent"
		android:layout_marginStart="19dp"
		android:layout_height="@dimen/go_premium_choosing_plan_activity_married_with_childre_constraint_layout_height"
		android:layout_marginEnd="@dimen/go_premium_choosing_plan_activity_married_with_childre_constraint_layout_margin_end"
		android:background="@drawable/gopreimium_bg"
		android:layout_marginTop="@dimen/go_premium_choosing_plan_activity_married_with_childre_constraint_layout_margin_top"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/married_constraint_layout"
		tools:layout_editor_absoluteX="20dp"
		tools:layout_editor_absoluteY="408dp">
	
		<ImageButton
			android:id="@+id/path_two_button"
			android:layout_width="@dimen/go_premium_choosing_plan_activity_path_two_button_width"
			android:layout_height="@dimen/go_premium_choosing_plan_activity_path_two_button_height"
			android:layout_marginEnd="@dimen/go_premium_choosing_plan_activity_path_two_button_margin_end"
			android:background="?attr/selectableItemBackground"
			android:src="@drawable/path_3"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="311dp"
			tools:layout_editor_absoluteY="51dp"/>
	
		<TextView
			android:id="@+id/months399_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/go_premium_choosing_plan_activity_months399_text_view_margin_start"
			android:layout_marginTop="@dimen/go_premium_choosing_plan_activity_months399_text_view_margin_top"
			android:fontFamily="@font/font_karla_bold"
			android:gravity="start"
			android:text="@string/go_premium_choosing_plan_activity_months399_text_view_text"
			android:textColor="#FFFFFF"
			android:textSize="@dimen/go_premium_choosing_plan_activity_months399_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/married_with_childre_text_view"
			tools:layout_editor_absoluteX="20dp"
			tools:layout_editor_absoluteY="39dp"/>
	
		<TextView
			android:id="@+id/ut_enim_ad_minim_ven_two_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/go_premium_choosing_plan_activity_ut_enim_ad_minim_ven_two_text_view_margin_start"
			android:layout_marginTop="@dimen/go_premium_choosing_plan_activity_ut_enim_ad_minim_ven_two_text_view_margin_top"
			android:alpha="0.8"
			android:fontFamily="@font/font_karla_regular"
			android:gravity="start"
			android:lineSpacingMultiplier="0.93"
			android:text="@string/go_premium_choosing_plan_activity_ut_enim_ad_minim_ven_two_text_view_text"
			android:textColor="#FFFFFF"
			android:textSize="@dimen/go_premium_choosing_plan_activity_ut_enim_ad_minim_ven_two_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/months399_text_view"
			tools:layout_editor_absoluteX="20dp"
			tools:layout_editor_absoluteY="74dp"/>
	
		<TextView
			android:id="@+id/married_with_childre_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/go_premium_choosing_plan_activity_married_with_childre_text_view_margin_start"
			android:layout_marginTop="@dimen/go_premium_choosing_plan_activity_married_with_childre_text_view_margin_top"
			android:alpha="0.8"
			android:fontFamily="@font/font_karla_regular"
			android:gravity="start"
			android:letterSpacing="0.15"
			android:text="@string/go_premium_choosing_plan_activity_married_with_childre_text_view_text"
			android:textColor="#FFFFFF"
			android:textSize="@dimen/go_premium_choosing_plan_activity_married_with_childre_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="20dp"
			tools:layout_editor_absoluteY="19dp"/>
	</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/bottom_constraint_layout"
		android:layout_width="0dp"
		android:layout_height="@dimen/go_premium_choosing_plan_activity_bottom_constraint_layout_height"
		android:layout_marginEnd="@dimen/go_premium_choosing_plan_activity_bottom_constraint_layout_margin_end"
		android:background="#FFFFFF"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintHorizontal_weight="1"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		tools:layout_editor_absoluteX="0dp"
		tools:layout_editor_absoluteY="571dp">
	
		<TextView
			android:id="@+id/cance_any_time_in_ap_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/go_premium_choosing_plan_activity_cance_any_time_in_ap_text_view_margin_top"
			android:fontFamily="@font/font_karla_regular"
			android:gravity="center"
			android:text="@string/go_premium_choosing_plan_activity_cance_any_time_in_ap_text_view_text"
			android:textColor="@color/go_premium_choosing_plan_activity_cance_any_time_in_ap_text_view_text_color"
			android:textSize="@dimen/go_premium_choosing_plan_activity_cance_any_time_in_ap_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/go_premium_button"
			tools:layout_editor_absoluteX="107dp"
			tools:layout_editor_absoluteY="93dp"/>
	
		<Button
			android:id="@+id/go_premium_button"
			android:layout_width="0dp"
			android:layout_height="@dimen/go_premium_choosing_plan_activity_go_premium_button_height"
			android:layout_marginEnd="@dimen/go_premium_choosing_plan_activity_go_premium_button_margin_end"
			android:layout_marginStart="@dimen/go_premium_choosing_plan_activity_go_premium_button_margin_start"
			android:layout_marginTop="@dimen/go_premium_choosing_plan_activity_go_premium_button_margin_top"
			android:background="@drawable/button_bg"
			android:fontFamily="@font/font_karla_bold"
			android:gravity="center"
			android:text="@string/go_premium_choosing_plan_activity_go_premium_button_text"
			android:textColor="#FFFFFF"
			android:textSize="@dimen/go_premium_choosing_plan_activity_go_premium_button_text_size"
			app:layout_constraintHorizontal_weight="0.89"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="20dp"
			tools:layout_editor_absoluteY="20dp"/>
	</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/bachelor_constraint_layout"
		android:layout_width="match_parent"
		android:layout_marginStart="19dp"
		android:layout_height="@dimen/go_premium_choosing_plan_activity_bachelor_constraint_layout_height"
		android:layout_marginEnd="@dimen/go_premium_choosing_plan_activity_bachelor_constraint_layout_margin_end"
android:background="@drawable/add_account_activity_manual_account_constraint_layout_background"
		android:layout_marginTop="@dimen/go_premium_choosing_plan_activity_bachelor_constraint_layout_margin_top"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/upgrade_to_premium_text_view"
		tools:layout_editor_absoluteX="20dp"
		tools:layout_editor_absoluteY="130dp">
	
		<ImageButton
			android:id="@+id/path_three_button"
			android:layout_width="@dimen/go_premium_choosing_plan_activity_path_three_button_width"
			android:layout_height="@dimen/go_premium_choosing_plan_activity_path_three_button_height"
			android:layout_marginEnd="@dimen/go_premium_choosing_plan_activity_path_three_button_margin_end"
			android:background="?attr/selectableItemBackground"
			android:src="@drawable/path_3"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="307dp"
			tools:layout_editor_absoluteY="52dp"/>
	
		<TextView
			android:id="@+id/month699_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/go_premium_choosing_plan_activity_month699_text_view_margin_start"
			android:layout_marginTop="@dimen/go_premium_choosing_plan_activity_month699_text_view_margin_top"
			android:fontFamily="@font/font_karla_bold"
			android:gravity="start"
			android:text="@string/go_premium_choosing_plan_activity_month699_text_view_text"
			android:textColor="#FFFFFF"
			android:textSize="@dimen/go_premium_choosing_plan_activity_month699_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/bachelor_text_view"
			tools:layout_editor_absoluteX="16dp"
			tools:layout_editor_absoluteY="39dp"/>
	
		<TextView
			android:id="@+id/ut_enim_ad_minim_ven_three_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/go_premium_choosing_plan_activity_ut_enim_ad_minim_ven_three_text_view_margin_start"
			android:layout_marginTop="@dimen/go_premium_choosing_plan_activity_ut_enim_ad_minim_ven_three_text_view_margin_top"
			android:alpha="0.8"
			android:fontFamily="@font/font_karla_regular"
			android:gravity="start"
			android:lineSpacingMultiplier="0.93"
			android:text="@string/go_premium_choosing_plan_activity_ut_enim_ad_minim_ven_three_text_view_text"
			android:textColor="#FFFFFF"
			android:textSize="@dimen/go_premium_choosing_plan_activity_ut_enim_ad_minim_ven_three_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/month699_text_view"
			tools:layout_editor_absoluteX="16dp"
			tools:layout_editor_absoluteY="74dp"/>
	
		<TextView
			android:id="@+id/bachelor_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/go_premium_choosing_plan_activity_bachelor_text_view_margin_start"
			android:layout_marginTop="@dimen/go_premium_choosing_plan_activity_bachelor_text_view_margin_top"
			android:alpha="0.8"
			android:fontFamily="@font/font_karla_regular"
			android:gravity="start"
			android:letterSpacing="0.15"
			android:text="@string/go_premium_choosing_plan_activity_bachelor_text_view_text"
			android:textColor="#FFFFFF"
			android:textSize="@dimen/go_premium_choosing_plan_activity_bachelor_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="16dp"
			tools:layout_editor_absoluteY="19dp"/>
	</androidx.constraintlayout.widget.ConstraintLayout>

	<TextView
		android:id="@+id/upgrade_to_premium_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/go_premium_choosing_plan_activity_upgrade_to_premium_text_view_margin_start"
		android:layout_marginTop="@dimen/go_premium_choosing_plan_activity_upgrade_to_premium_text_view_margin_top"
		android:fontFamily="@font/font_karla_bold"
		android:gravity="start"
		android:text="@string/go_premium_choosing_plan_activity_upgrade_to_premium_text_view_text"
		android:textColor="#1C1C1C"
		android:textSize="@dimen/go_premium_choosing_plan_activity_upgrade_to_premium_text_view_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/cancel_button"
		tools:layout_editor_absoluteX="19dp"
		tools:layout_editor_absoluteY="76dp"/>

	<Button
		android:id="@+id/cancel_button"
		android:layout_width="@dimen/go_premium_choosing_plan_activity_cancel_button_width"
		android:layout_height="@dimen/go_premium_choosing_plan_activity_cancel_button_height"
		android:layout_marginStart="@dimen/go_premium_choosing_plan_activity_cancel_button_margin_start"
		android:layout_marginTop="@dimen/go_premium_choosing_plan_activity_cancel_button_margin_top"
		android:background="?attr/selectableItemBackground"
		android:fontFamily="@font/font_karla_regular"
		android:gravity="start"
		android:text="@string/go_premium_choosing_plan_activity_cancel_button_text"
		android:textColor="#8A8A8A"
		android:textSize="@dimen/go_premium_choosing_plan_activity_cancel_button_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="19dp"
		tools:layout_editor_absoluteY="43dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>